<resources>
    <string name="app_name">Basics</string>
    <string name="action_settings">Settings</string>
    <string name="enter_a_value">Enter a value to multiply</string>
    <string name="ex_25">Ex : 25</string>
    <string name="result">Result</string>
    <string name="multiply">Multiply</string>
    <string name="percentage_calculator">Percentage Calculator</string>
    <string name="what_is">What is</string>
    <string name="of">Of</string>
    <string name="percentage_symbol">%</string>
    <string name="calculate">Calculate</string>
    <string name="percentage_calc">Percentage calculator</string>
    <string name="logo">logo</string>
</resources>
