<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    tools:context=".PercentageActivity" >

    <TextView
        android:id="@+id/resultp_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/result"
        android:textAlignment="center"
        android:textColor="#E91E63"
        android:textColorHint="#2AE91E63"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/whatis_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/result"
        android:text="@string/what_is"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/resultp_text"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/resultp_text"
        app:layout_constraintTop_toBottomOf="@+id/resultp_text" />

    <TextView
        android:id="@+id/of_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/result"
        android:text="@string/of"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/percentage_text"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/percentage_text"
        app:layout_constraintTop_toBottomOf="@+id/percentage_text" />

    <TextView
        android:id="@+id/symbol_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/percentage_symbol"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="@+id/percentage_text"
        app:layout_constraintEnd_toEndOf="@+id/whatis_text"
        app:layout_constraintStart_toEndOf="@+id/percentage_text"
        app:layout_constraintTop_toBottomOf="@+id/whatis_text"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/percentage_text"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="percentage"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textColorHighlight="#009688"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/whatis_text"
        app:layout_constraintStart_toStartOf="@+id/whatis_text"
        app:layout_constraintTop_toBottomOf="@+id/whatis_text"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/number_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="Number"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textColorHighlight="#009688"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/of_text"
        app:layout_constraintStart_toStartOf="@+id/of_text"
        app:layout_constraintTop_toBottomOf="@+id/of_text"
        tools:targetApi="o" />

    <Button
        android:id="@+id/percentage_calc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="#FC009688"
        android:padding="10dp"
        android:text="@string/calculate"
        android:textColor="#F8F5FAF9"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/number_text"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/number_text"
        app:layout_constraintTop_toBottomOf="@+id/number_text" />
</android.support.constraint.ConstraintLayout>